pattern-lab/source/_patterns/03-components/media-block/_media-block.scss
@mixin set($size) {
  >.bg-img {
    top: $size;
    bottom: $size;
    left: $size;
    right: $size;
  }
}

.media-block {
  &__content {
    padding: $spacing--l;
  }

  &__media {
    padding-top: 100%;
    position: relative;
    .bg-img {
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
    }
    .media-block--show-full-media & {
      padding-top: 0;
    }
  }

  &__title {
    @include h3;
    &[class*='u-bg-'] {
      padding: $spacing--xs $spacing--s;
      margin-bottom: $spacing--m;
    }
  }

  &__body {
    margin-bottom: $spacing--m;
    &:last-child {
      margin-bottom: 0;
    }
  }

  @include breakpoint($bp--medium) {
    display: flex;
    justify-content: space-between;
    &.media-block--media-on-right {
      flex-direction: row-reverse;
    }
    &__content {
      width: 50%;
      padding: $spacing--l $spacing--xl;
      .media-block--media-size-s & {
        width: 75%;
      }
      .media-block--media-size-l & {
        width: 33%;
      }
      .media-block--media-size-xl & {
        width: 25%;
      }
      .media-block--show-full-media & {
        display: flex;
        flex-direction: column;
        justify-content: center;
      }
    }
    &__media {
      padding-top: 0;
      width: 50%;
      // stylelint-disable max-nesting-depth
      &--img {
        &.media-block__media--padding {
          &-s {padding: $spacing--s;}
          &-m {padding: $spacing--m;}
          &-l {padding: $spacing--l;}
        }
      }

      &--bg {
        &.media-block__media--padding {
          &-s {
            @include set($spacing--s);
          }
          &-m {
            @include set($spacing--m);
          }
          &-l {
            @include set($spacing--l);
          }
          &-xl {
            @include set($spacing--xl);
          }
          &-xxl {
            @include set($spacing--xxl);
          }
        }
        .bg-img {

        }
      }
      // stylelint-enable max-nesting-depth
      .media-block--media-size-s & {
        width: 25%;
      }
      .media-block--media-size-l & {
        width: 66%;
      }
      .media-block--media-size-xl & {
        width: 75%;
      }
      .media-block--show-full-media & {
        display: flex;
        flex-direction: column;
        justify-content: center;
      }
    }
    &__title {
      @include h2;
      &[class*='u-bg-'] {
        padding: $spacing--xs $spacing--s;
        margin-bottom: $spacing--l;
      }
      &--inset {
        position: relative;
        &.media-block__title--inset {
          margin-top: $spacing--l;
        }
        .media-block--media-size-s & {
          left: -16.65%;
        }
        .media-block--media-size-m & {
          left: -33%;
        }
        .media-block--media-size-l & {
          left: -120%;
          width: 180%;
        }
        .media-block--media-size-xl & {
          left: -200%;
          width: 250%;
        }
      }
    }
  }
  &--media-on-top {
    flex-direction: column;
    > div {
      width: 100%;
    }
    @include breakpoint($bp--medium) {
      .media-block__media {
        padding-top: 35%;
      }
    }
  }
  &--media-on-bottom {
    flex-direction: column-reverse;
    > div {
      width: 100%;
    }
    @include breakpoint($bp--medium) {
      .media-block__media {
        padding-top: 35%;
      }
    }
  }
}

.media-block-grid {
  .media-block__media {
    padding-top: 0;
  }
  &__title {
    @include h1;
    text-align: center;
  }
}

